Finally fix buttons being cut off in admin

--- a/src/main/resources/DrawerStyle.css
+++ b/src/main/resources/DrawerStyle.css
@@ -12,7 +12,7 @@
 }
 
 
-.path-label {
+.label-path {
     -fx-text-fill: #FFFFFF;
     -fx-background-color: #4285f4;
     -fx-font-size: 18px;
